Fix notices sidebar broken layout

--- a/web-development/application/static/public/css/custom.css
+++ b/web-development/application/static/public/css/custom.css
@@ -541,3 +541,7 @@ textarea.form-control{
     border-left: #e3e3e3 1px solid;
     border-bottom:  #e3e3e3 1px solid;
 }
+
+.blog_right_sidebar .media > a{
+    display: flex;
+}
